--- a/Client/Makefile
+++ b/Client/Makefile
@@ -6,7 +6,7 @@ SRC_DIR = src
 CLIENT_SRC = $(SRC_DIR)/client.c
 UTILS_SRC = $(SRC_DIR)/utils.c
 CLIENT_BIN = $(BIN_DIR)/client
-SERVER_IP = 192.168.247.97
+SERVER_IP = 192.168.247.45 #A modifier selon l'ip du server
 
 .PHONY: all clean rules
 
@@ -26,7 +26,7 @@ clean:
 
 rules:
 	@echo "Available rules:"
-	@echo "	all		: Build the client executables"
-	@echo "	run		: Build then run the client request"
+	@echo " all	: Build the client executables"
+	@echo " run	: Build then run the client request"
 	@echo " clean	: Clean up generated files"
 	@echo " rules	: Show available rules"
